--- a/src/openapi/components/schemas/relativeCoordinate.yaml
+++ b/src/openapi/components/schemas/relativeCoordinate.yaml
@@ -2,13 +2,9 @@ type: object
 properties:
   x:
     type: integer
-    readOnly: true
+    readOnly: false
     example: -1
-    minimum: -100
-    maximum: 100
   y:
     type: integer
-    readOnly: true
+    readOnly: false
     example: 1
-    minimum: -100
-    maximum: 100
