#6: API design: Add API for initial map synchronization  (#56)
* #6: Add route for getting whole map data

--- a/src/openapi/components/schemas/pixel.yaml
+++ b/src/openapi/components/schemas/pixel.yaml
@@ -1,10 +1,9 @@
 type: object
 properties:
-  x:
-    type: integer
-    readOnly: false
-    example: 1
-  y:
-    type: integer
-    readOnly: false
-    example: 1
+  type:
+    $ref: "../enums/pixelTypes.yaml"
+  owner:
+    $ref: "../enums/pixelOwners.yaml"
+  ownPixel:
+    type: boolean
+    example: false
