#73: Using IConfig rather than Env var

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "OpenTelemetryEndpoint": "localhost:4318",
   "JWT": {
     "ValidAudience": "http://localhost:5129",
     "ValidIssuer": "http://localhost:5129"
