--- a/.github/workflows/backend-lint.yaml
+++ b/.github/workflows/backend-lint.yaml
@@ -9,6 +9,11 @@ on:
     branches:
       - main
 
+permissions:
+  checks: write
+  contents: write
+  pull-requests: write
+
 env:
   dotnet-version: "8.0.x"
 
@@ -22,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up .NET
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.dotnet-version }}
 
