#63 Small fixes for raised issues

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -9,5 +9,8 @@
   "JWT": {
     "ValidAudience": "http://localhost:5129",
     "ValidIssuer": "http://localhost:5129"
+  },
+  "Game": {
+    "FogOfWarDistance": 2
   }
 }
