#63 Moved map width and height to appsettings

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -11,6 +11,8 @@
     "ValidIssuer": "http://localhost:5129"
   },
   "Game": {
-    "FogOfWarDistance": 2
+    "FogOfWarDistance": 2,
+    "Width": 20,
+    "Height": 20
   }
 }
