--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "OpenTelemetryEndpoint": "localhost:4318",
+  "Game": {
+    "FogOfWarDistance": 2,
+    "Width": 20,
+    "Height": 20
+  },
   "AllowedHosts": "*"
 }
