--- a/src/tg-bot/.gitignore
+++ b/src/tg-bot/.gitignore
@@ -384,6 +384,7 @@ FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
 .vscode/*
+.vscode
 *.code-workspace
 
 # Local History for Visual Studio Code
