--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,6 +9,7 @@ infra/          @ekosfin
 src/backend/    @Cluster-ry/backend-devs
 src/openapi/    @Cluster-ry/backend-devs
 src/protobuf/   @Cluster-ry/backend-devs
+src/tg-bot/     @Cluster-ry/backend-devs
 
 # Frontend folder needs approval from someone in front-devs
 src/frontend/   @Cluster-ry/front-devs
