#121: Added arg for linting

--- a/.github/workflows/tg-bot-lint.yaml
+++ b/.github/workflows/tg-bot-lint.yaml
@@ -36,4 +36,5 @@ jobs:
         with:
           dotnet_format: true
           dotnet_format_dir: src/tg-bot/
+          dotnet_format_args: Titeenipeli-bot.sln 
           continue_on_error: false
