#113 Added option for cookie and token expiration time

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -8,7 +8,8 @@
   "OpenTelemetryEndpoint": "localhost:4318",
   "JWT": {
     "ValidAudience": "http://localhost:5129",
-    "ValidIssuer": "http://localhost:5129"
+    "ValidIssuer": "http://localhost:5129",
+    "ExpirationDays": 7
   },
   "Game": {
     "FogOfWarDistance": 2,
