--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -9,6 +9,7 @@
   "JWT": {
     "ValidAudience": "http://localhost:5129",
     "ValidIssuer": "http://localhost:5129",
+    "CookieName": "X-Authorization",
     "ExpirationDays": 7
   },
   "Game": {
