--- a/.github/workflows/pulumi-go-infra.yaml
+++ b/.github/workflows/pulumi-go-infra.yaml
@@ -51,6 +51,6 @@ jobs:
         uses: pulumi/actions@v4
         with:
           command: preview
-          stack-name: titeeni/peli
+          stack-name: test-dev
           cloud-url: ${{ secrets.AZURE_BLOB_ACCOUNT }}
           work-dir: ${{ env.working-dir }}
