--- a/.github/workflows/pulumi-go-infra.yaml
+++ b/.github/workflows/pulumi-go-infra.yaml
@@ -54,3 +54,5 @@ jobs:
           stack-name: test-dev
           cloud-url: ${{ secrets.AZURE_BLOB_ACCOUNT }}
           work-dir: ${{ env.working-dir }}
+        env:
+          PULUMI_ACCESS_TOKEN: ""
