--- a/.github/workflows/pulumi-go-infra.yaml
+++ b/.github/workflows/pulumi-go-infra.yaml
@@ -13,9 +13,8 @@ on:
 
 env:
   working-dir: ./infra/test
-  container-name: iacstate
   stack-name: dev
-  cloud-url: azblob://${{ env.container-name }}?storage_account=${{ secrets.AZURE_BLOB_ACCOUNT }}
+  cloud-url: azblob://iacstate?storage_account=${{ secrets.AZURE_BLOB_ACCOUNT }}
 
 permissions:
   id-token: write
