--- a/src/backend/Titeenipeli/Titeenipeli.csproj
+++ b/src/backend/Titeenipeli/Titeenipeli.csproj
@@ -9,6 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.63.0" />
+        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.63.0" />
+        <PackageReference Include="Grpc.AspNetCore.Web" Version="2.63.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.6"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.6"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4"/>
@@ -21,6 +24,10 @@
         <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Titeenipeli.gRPC\Titeenipeli.gRPC.csproj" />
+      </ItemGroup>
 
     <ItemGroup>
         <Content Include="..\.dockerignore">
