--- a/src/frontend/dockerfile
+++ b/src/frontend/dockerfile
@@ -18,6 +18,7 @@ RUN pnpm run build
 FROM nginx:alpine as production
 
 COPY --from=build /app/dist /usr/share/nginx/html/
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80     
 
