--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -9,5 +9,14 @@ http {
         location / {
             try_files $uri $uri/ /index.html;
         }
+
+        # Fixes for some browser load errors
+        location ~* \.(js)$ {
+            add_header Content-Type application/javascript;
+        }
+
+        location ~* \.(css)$ {
+            add_header Content-Type application/css;
+        }
     }
 }
