--- a/src/frontend/dockerfile
+++ b/src/frontend/dockerfile
@@ -1,5 +1,5 @@
 #Stage 1: Build
-FROM node:latest as build
+FROM node:latest AS build
 
 WORKDIR /app
 
@@ -15,7 +15,7 @@ COPY . /app
 RUN pnpm run build
 
 #Stage 2: Production
-FROM nginx:alpine as production
+FROM nginx:alpine AS production
 
 COPY --from=build /app/dist /usr/share/nginx/html/
 COPY nginx.conf /etc/nginx/nginx.conf
