--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -11,12 +11,9 @@ http {
         }
 
         # Fixes for some browser load errors
-        location ~* \.(js)$ {
-            add_header Content-Type application/javascript;
-        }
-
-        location ~* \.(css)$ {
-            add_header Content-Type application/css;
-        }
+        types {
+            application/javascript    js;
+            application/css           css;
+        }  
     }
 }
