Fixed for Firefox

--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -13,7 +13,8 @@ http {
         # Fixes for some browser load errors
         types {
             application/javascript    js;
-            application/css           css;
-        }  
+            text/css                  css;
+            text/html                 html;
+        }
     }
 }
