#119 Importing generated files succeeds

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -9,13 +9,17 @@
     "build": "pnpm generate-grpc && pnpm build-tsc-vite",
     "build-tsc-vite": "tsc && vite build",
     "generate-grpc": "mkdirp -p src/generated/grpc && pnpm compile-grpc-components && pnpm compile-grpc-services",
-    "compile-grpc-components": "grpc_tools_node_protoc --proto_path=../protobuf --js_out=import_style=commonjs:src/generated/grpc --grpc-web_out=import_style=typescript,mode=grpcweb:src/generated/grpc ../protobuf/components/*/*.proto",
-    "compile-grpc-services": "grpc_tools_node_protoc --proto_path=../protobuf --js_out=import_style=commonjs:src/generated/grpc --grpc-web_out=import_style=typescript,mode=grpcweb:src/generated/grpc ../protobuf/*/*.proto",
+    "compile-grpc-components": "npx protoc --proto_path=../protobuf --ts_out=src/generated/grpc --grpc-web_out=import_style=commonjs+dts,mode=grpcweb:src/generated/grpc ../protobuf/components/*/*.proto",
+    "compile-grpc-services": "npx protoc --proto_path=../protobuf --ts_out=src/generated/grpc --grpc-web_out=import_style=commonjs+dts,mode=grpcweb:src/generated/grpc ../protobuf/*/*.proto",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.11.1",
+    "@protobuf-ts/grpcweb-transport": "^2.9.4",
+    "@protobuf-ts/plugin": "^2.9.4",
+    "@protobuf-ts/protoc": "^2.9.4",
+    "@protobuf-ts/runtime": "^2.9.4",
+    "@protobuf-ts/runtime-rpc": "^2.9.4",
     "google-protobuf": "^3.21.4",
     "grpc-web": "^1.5.0",
     "react": "^18.3.1",
@@ -39,7 +43,6 @@
     "grpc-tools": "^1.12.4",
     "mkdirp": "^3.0.1",
     "protoc-gen-grpc-web": "^1.5.0",
-    "protoc-gen-js": "^3.21.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0",
     "vite": "^5.2.11",
