#152 Refactor JWT authentication to be middleware
- refactored JwtHandler into a service
- added JWT middleware
- added extensions to help working with JWTs

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -10,6 +10,7 @@
     "ValidAudience": "http://localhost:5129",
     "ValidIssuer": "http://localhost:5129",
     "CookieName": "X-Authorization",
+    "ClaimName": "titeenipeli-user",
     "ExpirationDays": 7
   },
   "Game": {
