#153 Added policy based authentication
- added policy checks that user has a guild

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -11,6 +11,7 @@
     "ValidIssuer": "http://localhost:5129",
     "CookieName": "X-Authorization",
     "ClaimName": "titeenipeli-user",
+    "GuildClaimName": "guild-id",
     "ExpirationDays": 7
   },
   "Game": {
