#132 Switched SpawnGenerator to use GameOptions for configuration
- added new options for configuring spawn generation

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -17,6 +17,9 @@
   "Game": {
     "FogOfWarDistance": 2,
     "Width": 20,
-    "Height": 20
+    "Height": 20,
+    "SpawnAreasPerGuild": 2,
+    "SpawnAreaDistanceFromCenter": 100,
+    "SpawnAreaRadius": 20
   }
 }
