--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -9,7 +9,10 @@
   "Game": {
     "FogOfWarDistance": 2,
     "Width": 20,
-    "Height": 20
+    "Height": 20,
+    "SpawnAreasPerGuild": 2,
+    "SpawnAreaDistanceFromCenter": 100,
+    "SpawnAreaRadius": 20
   },
   "AllowedHosts": "*"
 }
