#178 Fixed backend Dockerfile
Currently protobuf files are hard linked to Titeenipeli.gRPC project. These should be verified by someone else, I don't know how well git handles hard links inside repository.

--- a/src/backend/Titeenipeli.gRPC/Titeenipeli.gRPC.csproj
+++ b/src/backend/Titeenipeli.gRPC/Titeenipeli.gRPC.csproj
@@ -17,7 +17,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="..\..\protobuf\**\*.proto" ProtoRoot="..\..\protobuf" />
+    <Protobuf Include="protobuf/**/*.proto" ProtoRoot="protobuf"/>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="protobuf/"/>
   </ItemGroup>
 
 </Project>
