--- a/src/backend/Titeenipeli/Dockerfile
+++ b/src/backend/Titeenipeli/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
@@ -7,6 +7,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Titeenipeli/Titeenipeli.csproj", "Titeenipeli/"]
+COPY ["Titeenipeli.gRPC/Titeenipeli.gRPC.csproj", "Titeenipeli.gRPC/"]
 RUN dotnet restore "Titeenipeli/Titeenipeli.csproj"
 COPY . .
 WORKDIR "/src/Titeenipeli"
