--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -6,13 +6,21 @@
     }
   },
   "OpenTelemetryEndpoint": "localhost:4318",
+  "JWT": {
+    "ValidAudience": "http://localhost:5129",
+    "ValidIssuer": "http://localhost:5129",
+    "CookieName": "X-Authorization",
+    "ClaimName": "titeenipeli-user",
+    "GuildClaimName": "guild-id",
+    "ExpirationDays": 7
+  },
   "Game": {
     "FogOfWarDistance": 2,
     "Width": 20,
     "Height": 20,
     "SpawnAreasPerGuild": 2,
-    "SpawnAreaDistanceFromCenter": 100,
-    "SpawnAreaRadius": 20
+    "SpawnAreaDistanceFromCenter": 10,
+    "SpawnAreaRadius": 5
   },
   "AllowedHosts": "*"
 }
