--- a/src/backend/Titeenipeli/Titeenipeli.csproj
+++ b/src/backend/Titeenipeli/Titeenipeli.csproj
@@ -32,6 +32,7 @@
     <ItemGroup>
         <Content Include="..\.dockerignore">
             <Link>.dockerignore</Link>
+            <DependentUpon>Dockerfile</DependentUpon>
         </Content>
     </ItemGroup>
 
