--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,7 +8,7 @@
     "dev": "export NODE_OPTIONS=--use-openssl-ca && vite",
     "build": "pnpm generate-grpc && pnpm build-tsc-vite",
     "build-tsc-vite": "tsc && vite build",
-    "generate-grpc": "mkdirp -p src/generated/grpc && pnpm compile-grpc-components && pnpm compile-grpc-services",
+    "generate-grpc": "rimraf src/generated/grpc && mkdirp -p src/generated/grpc && pnpm compile-grpc-components && pnpm compile-grpc-services",
     "compile-grpc-components": "npx protoc --proto_path=../protobuf --ts_out=src/generated/grpc --ts_opt=ts_nocheck ../protobuf/components/*/*.proto",
     "compile-grpc-services": "npx protoc --proto_path=../protobuf --ts_out=src/generated/grpc --ts_opt=ts_nocheck ../protobuf/*/*.proto",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -43,6 +43,7 @@
     "grpc-tools": "^1.12.4",
     "mkdirp": "^3.0.1",
     "protoc-gen-grpc-web": "^1.5.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.10.0",
     "vite": "^5.2.11",
