#178 Moved docker-compose.yml and updated Dockerfile

--- a/src/backend/Titeenipeli.gRPC/Titeenipeli.gRPC.csproj
+++ b/src/backend/Titeenipeli.gRPC/Titeenipeli.gRPC.csproj
@@ -17,11 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="protobuf/**/*.proto" ProtoRoot="protobuf"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="protobuf/"/>
+    <Protobuf Include="../../protobuf/**/*.proto" ProtoRoot="../../protobuf"/>
   </ItemGroup>
 
 </Project>
