--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -3,7 +3,7 @@
     image: titeenipeli:latest
     build:
       context: .
-      dockerfile: Titeenipeli/Dockerfile
+      dockerfile: backend/Titeenipeli/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_HTTP_PORTS=8080
@@ -16,7 +16,6 @@
       - db
 
   db:
-    container_name: postgres-db
     image: postgres:16
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
