#185: Updated workflow for the new path

--- a/.github/workflows/pulumi-go-infra.yaml
+++ b/.github/workflows/pulumi-go-infra.yaml
@@ -12,7 +12,7 @@ on:
       - main
 
 env:
-  working-dir: ./infra/test
+  working-dir: ./infra/pulumi
   stack-name: dev
   cloud-url: azblob://iacstate?storage_account=${{ secrets.AZURE_BLOB_ACCOUNT }}
 
