#185: testing using msi

--- a/.github/workflows/pulumi-go-infra.yaml
+++ b/.github/workflows/pulumi-go-infra.yaml
@@ -32,12 +32,12 @@ jobs:
         shell: bash
         working-directory: ${{ env.working-dir }}
     steps:
-      #- name: Az CLI login
-      #  uses: azure/login@v2
-      #  with:
-      #    client-id: ${{ secrets.AZURE_CLIENT_ID }}
-      #    tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-      #    subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Az CLI login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Checkout 🛎️
         uses: actions/checkout@v4
@@ -59,11 +59,7 @@ jobs:
           work-dir: ${{ env.working-dir }}
           comment-on-pr: true
         env:
-          ARM_USE_OIDC: true
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          PULUMI_BACKEND_URL: ${{ env.cloud-url }}
+          ARM_USE_MSI: true
 
   update:
     name: Update
