--- a/.github/workflows/pulumi-go-infra.yaml
+++ b/.github/workflows/pulumi-go-infra.yaml
@@ -13,6 +13,7 @@ on:
 
 env:
   working-dir: ./infra/pulumi
+  go-version: "1.22"
   stack-name: dev
   cloud-url: azblob://iacstate?storage_account=${{ secrets.AZURE_BLOB_ACCOUNT }}
 
@@ -45,7 +46,8 @@ jobs:
       - name: Setup Go ✨
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: ${{ env.go-version }}
+          cache-dependency-path: ${{ env.working-dir }}/go.sum
 
       - name: Downloading dependencies 📦
         run: go mod download
@@ -84,7 +86,8 @@ jobs:
       - name: Setup Go ✨
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version: ${{ env.go-version }}
+          cache-dependency-path: ${{ env.working-dir }}/go.sum
 
       - name: Downloading dependencies 📦
         run: go mod download
@@ -98,7 +101,4 @@ jobs:
           work-dir: ${{ env.working-dir }}
           comment-on-pr: true
         env:
-          ARM_USE_OIDC: true
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          ARM_USE_MSI: true
