--- a/src/tg-bot/Titeenipeli-bot.csproj
+++ b/src/tg-bot/Titeenipeli-bot.csproj
@@ -13,4 +13,9 @@
         <PackageReference Include="Telegram.Bot" Version="19.0.0"/>
         <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.0"/>
     </ItemGroup>
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 </Project>
