--- a/src/openapi/paths/users/users.yaml
+++ b/src/openapi/paths/users/users.yaml
@@ -1,7 +1,7 @@
 post:
   tags:
     - users
-  summary: "Creates or logs in user."
+  summary: "Creates user."
   operationId: "postUsers"
   requestBody:
     description: "User details received from Telegram."
@@ -9,12 +9,14 @@ post:
     content:
       application/json:
         schema:
-          $ref: "../components/schemas/telegramAuthorizationData.yaml"
+          $ref: "../../components/schemas/telegramAuthorizationData.yaml"
   responses:
     "200":
-      $ref: "../components/responses/200UserAuthorization.yaml"
+      $ref: "../../components/responses/200TelegramAuthorization.yaml"
     "403":
-      $ref: "../components/responses/403AuthorizationError.yaml"
+      $ref: "../../components/responses/403AuthorizationError.yaml"
+  security:
+    - botAuth: []
 
 put:
   tags:
@@ -27,13 +29,13 @@ put:
     content:
       application/json:
         schema:
-          $ref: "../components/schemas/guild.yaml"
+          $ref: "../../components/schemas/guild.yaml"
   responses:
     "200":
       description: Guild details updated!
     "400":
-      $ref: "../components/responses/400ClientError.yaml"
+      $ref: "../../components/responses/400ClientError.yaml"
     "401":
-      $ref: "../components/responses/401Unauthorized.yaml"
+      $ref: "../../components/responses/401Unauthorized.yaml"
   security:
-    - bearerAuth: []
+    - botAuth: []
