Initial user creation flow

--- a/src/openapi/components/schemas/telegramAuthorizationData.yaml
+++ b/src/openapi/components/schemas/telegramAuthorizationData.yaml
@@ -1,6 +1,6 @@
 type: object
 properties:
-  id:
+  telegramId:
     type: integer
   firstName:
     type: string
@@ -8,5 +8,5 @@ properties:
     type: string
   username:
     type: string
-  photoUrl:
-    type: string
+  guild:
+    $ref: "../enums/guilds.yaml"
