--- a/src/tg-bot/Titeenipeli-bot.csproj
+++ b/src/tg-bot/Titeenipeli-bot.csproj
@@ -2,13 +2,14 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>Titeenipeli_bot</RootNamespace>
+        <RootNamespace>TiteenipeliBot</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <UserSecretsId>7c4da22e-11ad-4ef8-855d-68f36f0c6d8c</UserSecretsId>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0"/>
         <PackageReference Include="Telegram.Bot" Version="19.0.0"/>
         <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.0"/>
