--- a/src/tg-bot/appsettings.json
+++ b/src/tg-bot/appsettings.json
@@ -1,3 +1,9 @@
 {
-  "URI": "http://localhost:5129"
+  "Telegram": {
+    "Token": ""
+  },
+  "Backend": {
+    "Url": "https://localhost:7222",
+    "Token": ""
+  }
 }
