#238: Add login support for login

--- a/src/tg-bot/appsettings.json
+++ b/src/tg-bot/appsettings.json
@@ -3,7 +3,8 @@
     "Token": ""
   },
   "Backend": {
-    "Url": "https://localhost:7222",
+    "BackendUrl": "https://localhost:7222",
+    "FrontendUrl": "https://localhost:5173",
     "Token": ""
   }
 }
