--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -20,6 +20,9 @@
     "Height": 20,
     "SpawnAreasPerGuild": 2,
     "SpawnAreaDistanceFromCenter": 10,
-    "SpawnAreaRadius": 5
+    "SpawnAreaRadius": 5,
+    "PixelsPerMinutePerGuild": 10,
+    "InitialPixelBucket": 10,
+    "MaximumPixelBucket": 100
   }
 }
