#236: Fixes based on the review

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -21,5 +21,8 @@
     "SpawnAreasPerGuild": 2,
     "SpawnAreaDistanceFromCenter": 10,
     "SpawnAreaRadius": 5
+  },
+  "Bot": {
+    "AuthorizationHeaderName": "X-BOT-KEY"
   }
 }
