--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -22,5 +22,8 @@
     "SpawnAreaDistanceFromCenter": 10,
     "SpawnAreaRadius": 5
   },
+  "Bot": {
+    "AuthorizationHeaderName": "X-BOT-KEY"
+  },
   "AllowedHosts": "*"
 }
