#237: Fixes based on comments

--- a/src/backend/Titeenipeli/appsettings.Development.json
+++ b/src/backend/Titeenipeli/appsettings.Development.json
@@ -26,6 +26,7 @@
     "MaximumPixelBucket": 100
   },
   "Bot": {
-    "AuthorizationHeaderName": "X-BOT-KEY"
+    "AuthorizationHeaderName": "X-BOT-KEY",
+    "LoginTokenExpirationInMinutes": 10
   }
 }
