--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -26,7 +26,8 @@
     "MaximumPixelBucket": 100
   },
   "Bot": {
-    "AuthorizationHeaderName": "X-BOT-KEY"
+    "AuthorizationHeaderName": "X-BOT-KEY",
+    "LoginTokenExpirationInMinutes": 10
   },
   "AllowedHosts": "*"
 }
