#252: Remove tokens from the configuration file

--- a/src/tg-bot/appsettings.json
+++ b/src/tg-bot/appsettings.json
@@ -1,11 +1,7 @@
 {
-  "Telegram": {
-    "Token": ""
-  },
   "Backend": {
     "BackendUrl": "https://localhost:7222",
     "FrontendUrl": "https://localhost:5173",
-    "AuthorizationHeaderName": "X-BOT-KEY",
-    "Token": ""
+    "AuthorizationHeaderName": "X-BOT-KEY"
   }
 }
