Updated Openapi to new Pixel struct

--- a/src/openapi/components/schemas/pixel.yaml
+++ b/src/openapi/components/schemas/pixel.yaml
@@ -2,8 +2,7 @@ type: object
 properties:
   type:
     $ref: "../enums/pixelTypes.yaml"
+  guild:
+    $ref: "../enums/pixelGuild.yaml"
   owner:
-    $ref: "../enums/pixelOwners.yaml"
-  ownPixel:
-    type: boolean
-    example: false
+    $ref: "../enums/pixelUser.yaml"
