--- a/.github/workflows/frontend-lint.yaml
+++ b/.github/workflows/frontend-lint.yaml
@@ -33,3 +33,7 @@ jobs:
       - name: Lint check
         working-directory: src/frontend/
         run: pnpm eslint .
+
+      - name: Prettier check
+        working-directory: src/frontend/
+        run: pnpm prettier . --check
