--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -19,6 +19,7 @@
         "@protobuf-ts/grpcweb-transport": "^2.9.4",
         "@protobuf-ts/runtime": "^2.9.4",
         "@protobuf-ts/runtime-rpc": "^2.9.4",
+        "@tanstack/react-query": "^5.59.16",
         "axios": "^1.7.4",
         "pixi-viewport": "^5.0.3",
         "pixi.js": "^7.4.2",
@@ -43,6 +44,7 @@
         "grpc-tools": "^1.12.4",
         "mkdirp": "^3.0.1",
         "prettier": "^3.3.3",
+        "protoc": "^1.1.3",
         "rimraf": "^6.0.1",
         "typescript": "^5.4.5",
         "typescript-eslint": "^7.10.0",
