#271: Fix pixel bucket property

--- a/src/openapi/components/schemas/gameState.yaml
+++ b/src/openapi/components/schemas/gameState.yaml
@@ -7,7 +7,7 @@ properties:
         type: int
       maxAmount:
         type: int
-      ratePerMinute:
+      increasePerMinute:
         type: float
   scores:
     type: array
