#210 Refactor database into its own project

--- a/src/backend/Titeenipeli/Titeenipeli.csproj
+++ b/src/backend/Titeenipeli/Titeenipeli.csproj
@@ -42,5 +42,11 @@
 
     <ItemGroup>
         <ProjectReference Include="../Titeenipeli.Enumeration/Titeenipeli.Enumeration.csproj"/>
+        <ProjectReference Include="..\Titeenipeli.Database\Titeenipeli.Database.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Context\"/>
+        <Folder Include="Models\"/>
     </ItemGroup>
 </Project>
