--- a/src/backend/Titeenipeli.Schema/Titeenipeli.Schema.csproj
+++ b/src/backend/Titeenipeli.Schema/Titeenipeli.Schema.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Titeenipeli.Enumeration\Titeenipeli.Enumeration.csproj"/>
+        <ProjectReference Include="..\Titeenipeli.Common\Titeenipeli.Common.csproj" />
     </ItemGroup>
 
 </Project>
