--- a/src/backend/Titeenipeli.Common/Titeenipeli.Common.csproj
+++ b/src/backend/Titeenipeli.Common/Titeenipeli.Common.csproj
@@ -10,5 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+    </ItemGroup>
     
 </Project>
